Added live demo for one of the projects

--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/DTC/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <a href="https://kaylam60.github.io/DTC/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/Robot-perception" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                        <a href="https://youtu.be/" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
+                        <a href="https://youtu.be/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
                 </div>
                 
@@ -240,9 +240,9 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/ECE-3140" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
-                        <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
+                        <a href="https://youtu.be/QwKmXCfSBM4" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
                 </div>
             </div>
