needed fix for "Details links" needed

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <!-- Links are justified to the end (bottom) -->
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/Cube-Craze/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>
+                        <!--a href="https://kaylam60.github.io/Cube-Craze/" target="_blank" class="text-green-400 hover:underline font-semibold">Details &rarr;</a>-->
                         <a href="https://github.com/Kaylam60/Cube-Craze" target="_blank" class="text-blue-400 hover:underline font-semibold">GitHub &rarr;</a>
                         <!-- <a href="https://your-live-website.com" target="_blank" class="text-red-400 hover:underline font-semibold">Live Demo &rarr;</a> -->
                     </div>
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <!--a href="https://kaylam60.github.io/PiDash/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>-->
                         <a href="https://github.com/Kaylam60/PiDash" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                         <a href="https://youtu.be/BGgrBcqAX3g" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
@@ -196,7 +196,7 @@
                 <!-- Added h-160 class for fixed height -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem]">
                     <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit -->
-                    <img src="https://kaylam60.github.io/assets/rb.jpg" alt="Robotic arm Simul" class="rounded-lg mb-4 h-60 w-full object-cover">
+                    <img src="https://kaylam60.github.io/assets/FR.png" alt="Robotic arm Simul" class="rounded-lg mb-4 h-60 w-full object-cover">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Simulate my PID's and 6DOF's!(Details in Progress!)</h3>
                         <div class="project-description text-gray-300 mb-4">
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/rb/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <!--a href="https://kaylam60.github.io/rb/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>-->
                         <a href="https://github.com/Kaylam60/Foundations-of-Robotics" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     </div>
                 </div>
@@ -223,15 +223,16 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/HRH/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <!--a href="https://kaylam60.github.io/HRH/" target="_blank" class="text-green-400 hover:underline font-semibold self-end">Details &rarr;</a>-->
                         <a href="https://github.com/Kaylam60/Heart-Rate-Monitor" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                     </div>
                 </div>
                 
                 <!-- Project Card 6 -->
                 <!-- Added h-160 class for fixed height -->
+              <!--
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem]">
-                    <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit -->
+                    <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit 
                     <img src="https://kaylam60.github.io/assets/Crooks.png" alt="Dodge the Crooks Project Image" class="rounded-lg mb-4 h-60 w-full object-cover">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Dodge them crooks!</h3>
@@ -245,7 +246,7 @@
                         <a href="https://youtu.be/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
                 </div>
-                
+                -->
                 <!-- Project Card 7 -->
                 <!-- Added h-160 class for fixed height -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem]">
@@ -258,7 +259,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Details &rarr;</a>
+                        <!--a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Details &rarr;</a>-->
                         <a href="https://github.com/Kaylam60/ECE-3140" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                         <a href="https://youtu.be/QwKmXCfSBM4" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
