Revise project title and enhance description
Updated project title and description for clarity.

--- a/index.html
+++ b/index.html
@@ -198,9 +198,10 @@
                     <!-- Image fix applied: h-48 w-full object-cover ensures fixed size and proportional fit -->
                     <img src="https://kaylam60.github.io/assets/FR.png" alt="Robotic arm Simul" class="rounded-lg mb-4 h-60 w-full object-cover">
                     <div>
-                        <h3 class="text-xl font-bold mb-2 text-white">Simulate my PID's and 6DOF's!(Details in Progress!)</h3>
+                        <h3 class="text-xl font-bold mb-2 text-white">Simulate my Controllers and 6DOF's!</h3>
                         <div class="project-description text-gray-300 mb-4">
-                            <p> This project describes all the challenges and steps I went through  whilst simulating roobotic run in a virtual environment during my time in the ECE4770 Foundations of Robotics class
+                            <p> This project describes all the challenges and steps I went through  whilst simulating a robotic run ( both robotic car  and robotic arm implementations) in a virtual environment during my time in the ECE4770 Foundations of Robotics class.
+                              From an introduction to robotics as a whole. degrees of freedom and how they are measured to Klarman and Bayesian filters and the Ziegler Nichols Method for the estimation of PID and MPC controllers
                             </p>
                         </div>
                     </div>
