--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4">
-                        <!--a href="https://kaylam60.github.io/SLAM-Based-Robot/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Details &rarr;</a>-->
+                        <a href="https://pages.github.coecis.cornell.edu/ece3140-sp2024/dow26-kao65/" target="_blank" class="text-gray-400 hover:underline font-semibold self-end">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/ECE-3140" target="_blank" class="text-blue-400 hover:underline font-semibold self-end">GitHub &rarr;</a>
                         <a href="https://youtu.be/QwKmXCfSBM4" target="_blank" class="text-red-400 hover:underline font-semibold self-end">Live Demo &rarr;</a>
                     </div>
