--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
             <div id="resume-preview-container" class="bg-gray-800 border border-gray-700 rounded-xl shadow-2xl overflow-hidden">
                 <div class="p-6 bg-gray-800/50 border-b border-gray-700 flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <span class="text-sm font-semibold text-gray-400 uppercase tracking-widest">Resume Preview</span>
-                    <a href="KofiOheneAdu_Resume_1201" download class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105 active:scale-95">
+                    <a href="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201" download class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105 active:scale-95">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
                         <span>Download PDF</span>
                     </a>
                 </div>
                 <div class="w-full bg-gray-900" style="height: 750px;">
                     <!-- The PDF Embed -->
-                    <embed src="KofiOheneAdu_Resume_1201" type="application/pdf" width="100%" height="100%" />
+                    <embed src="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201" type="application/pdf" width="100%" height="100%" />
                     <!-- Mobile Fallback -->
                     <div class="md:hidden p-8 text-center text-gray-400 h-full flex items-center justify-center">
                         <p>PDF preview is optimized for desktop. <br> Please use the Download button above to view the full resume.</p>
