--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <div class="p-6 bg-gray-800/50 border-b border-gray-700 flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <span class="text-sm font-semibold text-gray-400 uppercase tracking-widest">Live Preview</span>
                     <div class="flex space-x-4">
-                        <a href="resume.pdf" target="_blank" class="text-gray-400 hover:text-white text-sm flex items-center underline">Open in New Tab</a>
-                        <a href="resume.pdf" download="Kofi_Resume.pdf" class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105">
+                        <a href="https://kaylam60.github.io/assets/resume.pdf" target="_blank" class="text-gray-400 hover:text-white text-sm flex items-center underline">Open in New Tab</a>
+                        <a href="https://kaylam60.github.io/assets/resume.pdf" download="Kofi_Resume.pdf" class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
                             <span>Download PDF</span>
                         </a>
@@ -142,7 +142,7 @@
                 </div>
                 <!-- Embed Area -->
                 <div class="w-full bg-gray-900" style="height: 800px;">
-                    <embed src="resume.pdf" type="application/pdf" width="100%" height="100%" />
+                    <embed src="https://kaylam60.github.io/assets/resume.pdf" type="application/pdf" width="100%" height="100%" />
                     <!-- Mobile helper in case embed fails -->
                     <div class="md:hidden p-12 text-center text-gray-400">
                         <p class="mb-4">PDF Preview is best on desktop.</p>
