--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   
   Features:
   - Dark Mode + Tailwind CSS
-  - FIX: Resume PDF visibility and download logic
-  - FIX: Firestore Permission & Auth Logic (Rule 1 & 3)
+  - Expandable Resume Bar with PDF Preview & Download
+  - Private Firestore View Counter (Secret: add ?admin=true to URL)
   - Fade-in scroll animations
-  - Consistent project card heights (40rem)
-  - Hidden scrollbars for project descriptions
+  - FIXED: Ensured all project card images are the same size using the h-60 w-full object-cover classes.
+  - FIXED: Enforced a consistent height for the ENTIRE project card using the h-[40rem] custom value.
+  - NEW: Added CSS rules to hide the scrollbar on the project descriptions while preserving scroll functionality, for a cleaner look.
 -->
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
@@ -35,9 +36,13 @@
         }
     </script>
     <style>
-        html { scroll-behavior: smooth; }
-        body { font-family: 'Inter', sans-serif; }
-        
+        /* Custom styles for the smooth scroll effect */
+        html {
+            scroll-behavior: smooth;
+        }
+        body {
+            font-family: 'Inter', sans-serif;
+        }
         /* Animation class for the fade-in effect */
         .fade-in-section {
             opacity: 0;
@@ -84,10 +89,10 @@
         <nav class="container mx-auto px-6 py-4 flex items-center justify-between">
             <a href="#" class="text-xl md:text-2xl font-bold text-gray-100 tracking-tight">Kofi Aboagye Ohene Adu</a>
             <div class="hidden md:flex items-center space-x-8">
-                <a href="#about" class="text-gray-300 hover:text-white transition-colors">About</a>
-                <a href="#resume-section" class="text-gray-300 hover:text-white transition-colors">Resume</a>
-                <a href="#projects" class="text-gray-300 hover:text-white transition-colors">Projects</a>
-                <a href="#connect" class="text-gray-300 hover:text-white transition-colors">Connect</a>
+                <a href="#about" class="text-gray-300 hover:text-white transition-colors text-sm uppercase tracking-wider font-semibold">About</a>
+                <a href="#resume-section" class="text-gray-300 hover:text-white transition-colors text-sm uppercase tracking-wider font-semibold">Resume</a>
+                <a href="#projects" class="text-gray-300 hover:text-white transition-colors text-sm uppercase tracking-wider font-semibold">Projects</a>
+                <a href="#connect" class="text-gray-300 hover:text-white transition-colors text-sm uppercase tracking-wider font-semibold">Connect</a>
             </div>
         </nav>
     </header>
@@ -134,7 +139,7 @@
                     </div>
                     <div class="text-left">
                         <h3 class="text-xl font-bold text-white group-hover:text-blue-400 transition-colors uppercase tracking-tight">Professional Resume</h3>
-                        <p class="text-gray-400 text-sm">Click to expand preview or download PDF</p>
+                        <p class="text-gray-400 text-sm italic">Click to expand preview or download PDF</p>
                     </div>
                 </div>
                 <div id="resume-icon" class="text-gray-500 transition-transform duration-500">
@@ -145,10 +150,10 @@
             <!-- Expanded Resume Preview -->
             <div id="resume-preview-container" class="bg-gray-800 border border-gray-700 rounded-xl shadow-2xl overflow-hidden">
                 <div class="p-6 bg-gray-800/50 border-b border-gray-700 flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
-                    <span class="text-sm font-semibold text-gray-400 uppercase tracking-widest">Live Preview</span>
+                    <span class="text-sm font-semibold text-gray-400 uppercase tracking-widest">Resume Preview</span>
                     <div class="flex space-x-4">
                         <a href="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" target="_blank" class="text-gray-400 hover:text-white text-sm flex items-center underline">Open in New Tab</a>
-                        <a href="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" download="Kofi_Resume.pdf" class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105">
+                        <a href="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" download="KofiOheneAdu_Resume.pdf" class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105 active:scale-95">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
                             <span>Download PDF</span>
                         </a>
@@ -156,6 +161,7 @@
                 </div>
                 <!-- Embed Area -->
                 <div class="w-full bg-gray-900" style="height: 800px;">
+                    <!-- Added .pdf extension to ensure browser recognizes it as a PDF -->
                     <embed src="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" type="application/pdf" width="100%" height="100%" />
                     <!-- Mobile fallback -->
                     <div class="md:hidden p-12 text-center text-gray-400">
@@ -168,11 +174,12 @@
 
         <!-- Projects Section -->
         <section id="projects" class="py-12 md:py-16 fade-in-section">
-            <h2 class="text-3xl font-bold mb-8 text-center text-white">My Projects</h2>
+            <h2 class="text-3xl font-bold mb-8 text-center text-white font-inter">My Projects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <!-- Project Card 1: Cube Craze -->
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem] border border-gray-700 hover:border-blue-500 transition-colors">
+                    <!-- Image fix applied: h-60 w-full object-cover ensures fixed size and proportional fit -->
                     <img src="https://kaylam60.github.io/assets/CCR.jpg" alt="Cube Craze Robotics Project Image" class="rounded-lg mb-4 h-60 w-full object-cover">
                     <div>
                         <h3 class="text-xl font-bold mb-2 text-white">Cube Craze Robotics</h3>
@@ -259,10 +266,7 @@
                     </div>
                 </div>
 
-                <!-- 
-                  Project Card 7: (Optional/Placeholder)
-                  Kept in comments as requested.
-                -->
+                <!-- Project Card 7: (Optional/Placeholder) -->
                 <!--
                 <div class="bg-gray-800 rounded-xl shadow-lg p-6 flex flex-col justify-between h-[40rem] border border-gray-700 hover:border-blue-500 transition-colors">
                     <img src="https://kaylam60.github.io/assets/Crooks.png" alt="Dodge the Crooks Project Image" class="rounded-lg mb-4 h-60 w-full object-cover">
@@ -293,7 +297,7 @@
         </section>
     </main>
 
-    <!-- Secret Admin View Counter Badge (Visible only with ?admin=true) -->
+    <!-- Secret Admin View Counter Badge (Visible only with ?admin=true anywhere in URL) -->
     <div id="admin-counter" class="hidden fixed bottom-6 right-6 bg-gray-800/90 backdrop-blur border border-gray-600 text-xs text-gray-400 px-4 py-2.5 rounded-full shadow-2xl z-50 flex items-center space-x-3">
         <span class="w-2.5 h-2.5 bg-green-500 rounded-full animate-pulse shadow-[0_0_8px_rgba(34,197,94,0.6)]"></span>
         <span class="font-mono uppercase tracking-widest">Total Site Views: <b id="view-count" class="text-white ml-1">...</b></span>
@@ -317,11 +321,10 @@
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'kofi-portfolio-2025';
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'kofi-final-v5';
 
-        // 1. Check for Admin Mode via URL
-        const urlParams = new URLSearchParams(window.location.search);
-        const isAdmin = urlParams.get('admin') === 'true';
+        // 1. FOOLPROOF ADMIN CHECK: Looks in search query AND the hash/fragment string
+        const isAdmin = window.location.href.includes('admin=true');
 
         // 2. Auth Initialization (Rule 3 Pattern)
         const initAuth = async () => {
