--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
                 <h2 class="text-3xl font-bold mb-6 text-center text-white">About Me</h2>
                 <div class="text-gray-300 text-lg leading-relaxed space-y-4 max-w-4xl mx-auto">
                     <p>
-                        Hello! My name is Kofi (the "Ko" is pronounced like "Koe". My name is not coffee/cafe. Yes, I have heard both😅). 
-                        I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in robotics, automation, and control systems.
+                        Hello! My name is Kofi (the "Ko" is pronounced like "Koe-Fee". My name is not coffee/cafe. Yes, I have heard both😅). 
+                        I'm a recent Electrical and Computer Engineering graduate from Cornell University with a strong interest in robotics, embedded systems, automation, and control systems.
                     </p>
                     <p>
-                        I'm also looking to branch into cloud and networks. You can find some of my projects on my
+                        I'm also looking to branch into cloud and networks if any opportunity allows. You can find some of my projects on my
                         <a href="https://github.com/Kaylam60" target="_blank" class="text-blue-400 hover:underline font-bold">GitHub profile</a>.
                     </p>
                     <p>
