Add links to project details for Light them Beats

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row space-x-4 justify-end mt-auto pt-4 text-sm">
+                        <a href="https://pages.github.coecis.cornell.edu/ece3140-sp2024/dow26-kao65/" target="_blank" class="text-green-400 hover:underline font-semibold uppercase tracking-wide">Details &rarr;</a>
                         <a href="https://github.com/Kaylam60/ECE-3140" target="_blank" class="text-blue-400 hover:underline font-semibold uppercase tracking-wide">GitHub &rarr;</a>
                         <a href="https://youtu.be/QwKmXCfSBM4" target="_blank" class="text-red-400 hover:underline font-semibold uppercase tracking-wide">Demo &rarr;</a>
                     </div>
