Update resume links to point to new URL

--- a/index.html
+++ b/index.html
@@ -156,17 +156,17 @@
                     <span class="text-sm font-semibold text-gray-400 uppercase tracking-widest text-center">Resume Preview</span>
                     <div class="flex space-x-4">
                         <a href="resume.pdf" target="_blank" class="text-gray-400 hover:text-white text-sm flex items-center underline">Open in New Tab</a>
-                        <a href="resume.pdf" download="Kofi_OheneAdu_Resume.pdf" class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105 active:scale-95">
+                        <a href="resume.pdf" download="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" class="bg-blue-600 hover:bg-blue-500 text-white px-8 py-2.5 rounded-lg font-bold flex items-center space-x-2 transition-all shadow-lg transform hover:scale-105 active:scale-95">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"></path></svg>
                             <span>Download PDF</span>
                         </a>
                     </div>
                 </div>
                 <div class="w-full bg-gray-900" style="height: 750px;">
-                    <embed src="resume.pdf" type="application/pdf" width="100%" height="100%" />
+                    <embed src="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" type="application/pdf" width="100%" height="100%" />
                     <div class="md:hidden p-12 text-center text-gray-400 h-full flex flex-col justify-center items-center">
                         <p class="mb-4">PDF Preview is best on desktop.</p>
-                        <a href="resume.pdf" target="_blank" class="bg-gray-700 px-6 py-2 rounded-lg text-white font-bold">View Full Resume</a>
+                        <a href="https://kaylam60.github.io/assets/KofiOheneAdu_Resume_1201.pdf" target="_blank" class="bg-gray-700 px-6 py-2 rounded-lg text-white font-bold">View Full Resume</a>
                     </div>
                 </div>
             </div>
